--- a/sctnet/res/layout/guide_activity.xml
+++ b/sctnet/res/layout/guide_activity.xml
@@ -3,16 +3,44 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-    
-      <TextView 
-            android:layout_width="40dp"
-            android:layout_height="25dp"
-            android:background="#ffffff"
-            android:text="引导页"
-            />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_guide_viewpager"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
+
+    <LinearLayout
+        android:id="@+id/ll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="24.0dp"
+        android:orientation="horizontal" >
+
+        <TextView 
+            android:layout_width="20dp"
+            android:layout_height="5dp"
+            android:background="#ffffff"
+            />
+        <TextView 
+            android:layout_width="20dp"
+            android:layout_height="5dp"
+            android:layout_marginLeft="2dp"
+            android:background="#ffffff"
+            />
+        <TextView 
+            android:layout_width="20dp"
+            android:layout_height="5dp"
+            android:layout_marginLeft="2dp"
+            android:background="#ffffff"
+            />
+        <TextView 
+            android:layout_width="20dp"
+            android:layout_height="5dp"
+            android:layout_marginLeft="2dp"
+            android:background="#ffffff"
+            />
+    </LinearLayout>
 
 </RelativeLayout>
