--- a/sctnet/res/values/styles.xml
+++ b/sctnet/res/values/styles.xml
@@ -2,4 +2,19 @@
 
     <style name="AppTheme" parent="android:Theme.Light" />
 
+    <!-- title style -->
+    <style name="title_bg">
+        <item name="android:background">@drawable/titlebar_bg</item>
+    </style>
+    <style name="title" parent="android:Theme">
+        <item name="android:windowTitleSize">43.0dip</item>
+        <item name="android:windowTitleBackgroundStyle">@style/title_bg</item>
+    </style>
+    
+    <style name="process_dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+    
 </resources>
