--- a/sctnet/res/values/color.xml
+++ b/sctnet/res/values/color.xml
@@ -2,5 +2,7 @@
  <resources>
      <color name="transparent">#00000000</color><!-- 透明色  -->
      <color name="homePageBg">#111111</color><!-- 灰色  -->
-     
+     <color name="white">#FFFFFF</color><!-- 白色 -->
+     <color name="blue">#0b98e0</color><!-- 蓝色 -->
+     <color name="black">#000000</color>
  </resources>
