--- a/sctnet/res/layout/job_search_activity.xml
+++ b/sctnet/res/layout/job_search_activity.xml
@@ -5,4 +5,81 @@
     android:background="@drawable/background"
      >
     
+           <RelativeLayout
+             android:id="@+id/home_activity_search"
+             android:layout_width="wrap_content"  
+             android:layout_height="wrap_content"  
+             android:layout_marginTop="20dip"
+              >
+
+           <EditText 
+             android:id="@+id/search_edit_bg"
+             android:layout_width="fill_parent"
+	         android:layout_height="wrap_content" 
+             android:background="@drawable/search_bg"
+             android:hint="@string/homeactivityhint"
+             android:gravity="center_vertical"
+              android:paddingLeft="35dip"
+              android:singleLine="true"
+               />  
+               
+              <ImageView 
+	        android:id="@+id/search_bar"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" 
+	        android:layout_marginLeft="10dip"
+	        android:layout_centerVertical="true"
+	        android:layout_alignLeft="@+id/search_edit_bg"  
+	        android:background="@drawable/search_bar"
+        /> 
+         </RelativeLayout>
+    
+    <LinearLayout 
+        android:id="@+id/search_item_layout"
+        android:layout_width="wrap_content"
+	    android:layout_height="wrap_content" 
+	    android:orientation="vertical"
+	    android:layout_below="@+id/home_activity_search"
+        >
+    
+      <com.sctn.sctnet.view.ItemView
+         android:id="@+id/itemview1"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         />
+        <com.sctn.sctnet.view.ItemView
+         android:id="@+id/itemview2"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         />
+            <com.sctn.sctnet.view.ItemView
+         android:id="@+id/itemview3"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         />
+                <com.sctn.sctnet.view.ItemView
+         android:id="@+id/itemview4"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         />
+    </LinearLayout>
+    
+    <Button 
+        android:id="@+id/search_btn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/detail_title_bg"
+        android:text="搜    索"
+        android:layout_below="@+id/search_item_layout"
+        android:layout_marginTop="10dip"
+        />
+    
+      <ListView 
+          android:id="@+id/search_history_listview1"	
+          android:layout_width="fill_parent"  
+          android:layout_height="wrap_content"
+          android:cacheColorHint="#00000000"
+          android:layout_below="@+id/search_btn"
+       /> 
+    
 </RelativeLayout>
