--- a/sctnet/res/layout/personal_center_activity.xml
+++ b/sctnet/res/layout/personal_center_activity.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="center_horizontal"
-    android:background="@drawable/background"
+    android:background="@color/background"
     android:orientation="vertical" >
 <ScrollView
         android:id="@+id/ScrollView"
