--- a/sctnet/res/layout/worksearch_activity.xml
+++ b/sctnet/res/layout/worksearch_activity.xml
@@ -21,6 +21,7 @@
              android:gravity="center_vertical"
               android:paddingLeft="35dip"
               android:singleLine="true"
+               android:imeOptions="actionSearch"  
                />  
                
               <ImageView 
