--- a/sctnet/res/layout/personal_center_activity.xml
+++ b/sctnet/res/layout/personal_center_activity.xml
@@ -42,27 +42,21 @@
               android:layout_alignBottom="@+id/userNameLabel"
               />
          </RelativeLayout>
-       <LinearLayout 
-          android:id="@+id/positionInfo"
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:layout_below="@+id/userInfo"
-          android:orientation="horizontal"
-          android:layout_marginTop="15dip"
-          android:layout_marginLeft="15dip"
-          android:layout_marginRight="15dip">
+       
           <RelativeLayout 
               android:id="@+id/postApplication"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_weight="1"
-              android:background="#0066FF"
+              android:layout_alignParentLeft="true"
+              android:layout_marginLeft="36dp"
+              android:layout_below="@+id/userInfo"
+              android:layout_marginTop="20dp"
               >
               <ImageView 
                   android:id="@+id/postAppImage"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  
+                  android:background="@drawable/post_application_bg"
                   />
               <TextView 
                   android:id="@+id/postAppCount"
@@ -71,8 +65,9 @@
                   android:layout_alignLeft="@+id/postAppImage"
                   android:layout_alignRight="@+id/postAppImage"
                   android:gravity="center"
-                  android:paddingTop="3dp"
-                  android:textSize="15dp"
+                  android:paddingTop="5dp"
+                  android:textSize="20dp"
+                  android:text="3"
                   android:textColor="@color/white"
                   android:paddingBottom="2dp"/>
               <TextView 
@@ -83,7 +78,7 @@
                   android:layout_alignRight="@+id/postAppImage"
                   android:layout_below="@+id/postAppCount"
                   android:gravity="center"
-                  android:paddingBottom="3dp"
+                  android:paddingTop="3dp"
                   android:textSize="15dp"
                   android:text="@string/postAppRecord"
                   android:textColor="@color/white"
@@ -93,14 +88,16 @@
               android:id="@+id/postCollection "
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_weight="1"
-              android:background="#FF6600"
+              android:layout_alignParentRight="true"
+              android:layout_marginRight="36dp"
+              android:layout_below="@+id/userInfo"
+              android:layout_marginTop="20dp"
               >
               <ImageView 
                   android:id="@+id/postCollImage"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  
+                  android:background="@drawable/post_collection_bg"
                   />
               <TextView 
                   android:id="@+id/postCollCount"
@@ -109,10 +106,10 @@
                   android:layout_alignLeft="@+id/postCollImage"
                   android:layout_alignRight="@+id/postCollImage"
                   android:gravity="center"
-                  android:paddingTop="3dp"
-                  android:text="3"
+                  android:paddingTop="5dp"
+                  android:text="1"
                   android:textColor="@color/white"
-                  android:textSize="15dp"
+                  android:textSize="20dp"
                   android:paddingBottom="2dp"/>
               <TextView 
                   android:id="@+id/postCollRecord"
@@ -122,20 +119,18 @@
                   android:layout_alignRight="@+id/postCollImage"
                   android:layout_below="@+id/postCollCount"
                   android:gravity="center"
-                  android:paddingBottom="3dp"
+                  android:paddingTop="3dp"
                   android:textSize="15dp"
                   android:text="@string/postCollRecord"
                   android:textColor="@color/white"
                   />
           </RelativeLayout>
           
-          
-      </LinearLayout>
      <com.sctn.sctnet.view.ItemView
          android:id="@+id/itemview1"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
-         android:layout_below="@+id/positionInfo"
+         android:layout_below="@+id/postApplication"
          android:layout_marginTop="15dp"
          />
      <com.sctn.sctnet.view.ItemView
