--- a/sctnet/res/values/styles.xml
+++ b/sctnet/res/values/styles.xml
@@ -17,4 +17,9 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
     
+        <!-- checkbox style -->
+    <style name="checkbox" parent="@android:style/Widget.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/common_checkbox</item>
+        <item name="android:textColor">#FFA2A499</item>
+    </style>
 </resources>
