--- a/sctnet/res/values/color.xml
+++ b/sctnet/res/values/color.xml
@@ -6,4 +6,6 @@
      <color name="blue">#0b98e0</color><!-- 蓝色 -->
      <color name="black">#000000</color>
      <color name="background">#f4f4f4</color><!-- 背景色 灰色 -->
+     <color name="darkBlue">#00008b</color><!-- 深蓝色 -->
+     <color name="semiTransparent">#55000000</color>
  </resources>
