--- a/sctnet/res/layout/personal_info_activity.xml
+++ b/sctnet/res/layout/personal_info_activity.xml
@@ -7,17 +7,17 @@
     android:orientation="vertical"
     >
     <TextView 
-        android:id="@+id/resume_name_text"
+        android:id="@+id/personal_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18dp"
         android:textColor="@color/black"
-        android:text="@string/resumeName"
+        android:text="@string/personalName"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="7dp"/>
     <EditText 
-        android:id="@+id/resume_name_value"
+        android:id="@+id/personal_name_value"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="17dp"
@@ -29,38 +29,39 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp"
         android:background="@color/white"
-        android:layout_below="@+id/resume_name_text"/>
+        android:layout_below="@+id/personal_name_text"/>
+    <Button 
+        android:id="@+id/sex_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/personal_name_value"
+        android:layout_alignTop="@+id/personal_name_value"
+        android:layout_alignBottom="@+id/personal_name_value"
+        android:background="@color/blue"
+        android:text="女"
+        android:textColor="@color/white"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        />
     <RelativeLayout 
           android:id="@+id/relativeLayout1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_below="@+id/resume_name_value"
-          android:layout_alignLeft="@+id/resume_name_value"
-          android:layout_alignRight="@+id/resume_name_value"
+          android:layout_below="@+id/personal_name_value"
+          android:layout_alignLeft="@+id/personal_name_value"
+          android:layout_alignRight="@+id/personal_name_value"
           android:background="@color/white"
           >
           <TextView 
-              android:id="@+id/resumeRequiredText"
-              android:layout_width="match_parent"
+              android:id="@+id/persional_info_notes"
               android:layout_height="wrap_content"
-              android:background="@color/blue"
-              android:text="@string/resumeNote1"
-              android:textColor="@color/white"
-              android:paddingLeft="68dp" 
-              android:paddingTop="10dp"
-              android:paddingBottom="10dp"             
-              />
-          <TextView 
-              android:id="@+id/resumeNotes1"
-              android:layout_height="wrap_content"
-              android:layout_width="wrap_content"
-              android:layout_alignLeft="@+id/resumeRequiredText"
-              android:layout_alignTop="@+id/resumeRequiredText"
-              android:layout_alignBottom="@+id/resumeRequiredText"
+              android:layout_width="fill_parent"
               android:textColor="@color/white"
               android:background="@color/blue"
               android:textSize="18dp"
-              android:text="@string/resumeRequired"
+              android:text="@string/personalInfoActivityTitle"
               android:paddingTop="8dp"
               android:paddingLeft="8dp"
               android:paddingBottom="8dp"/>
@@ -68,7 +69,7 @@
          android:id="@+id/itemview1"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
-         android:layout_below="@+id/resumeRequiredText"
+         android:layout_below="@+id/persional_info_notes"
          />
      <com.sctn.sctnet.view.ItemView
          android:id="@+id/itemview2"
@@ -82,7 +83,12 @@
          android:layout_height="wrap_content"
          android:layout_below="@+id/itemview2"
          />
-          
+      <com.sctn.sctnet.view.ItemView
+         android:id="@+id/itemview4"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         android:layout_below="@+id/itemview2"
+         />    
     </RelativeLayout> 
     <RelativeLayout 
           android:id="@+id/relativeLayout2"
@@ -95,27 +101,13 @@
           android:layout_marginTop="20dp"
           >
           <TextView 
-              android:id="@+id/resumeOptionalText"
-              android:layout_width="match_parent"
+              android:id="@+id/paper_info_notes"
               android:layout_height="wrap_content"
-              android:background="@color/blue"
-              android:text="@string/resumeNote2"
-              android:textColor="@color/white"
-              android:paddingLeft="68dp" 
-              android:paddingTop="10dp"
-              android:paddingBottom="10dp"             
-              />
-          <TextView 
-              android:id="@+id/resumeNotes2"
-              android:layout_height="wrap_content"
-              android:layout_width="wrap_content"
-              android:layout_alignLeft="@+id/resumeOptionalText"
-              android:layout_alignTop="@+id/resumeOptionalText"
-              android:layout_alignBottom="@+id/resumeOptionalText"
+              android:layout_width="fill_parent"
               android:textColor="@color/white"
               android:background="@color/blue"
               android:textSize="18dp"
-              android:text="@string/resumeOptional"
+              android:text="@string/paperInfoNote"
               android:paddingTop="8dp"
               android:paddingLeft="8dp"
               android:paddingBottom="8dp"/>
@@ -123,7 +115,7 @@
          android:id="@+id/itemview11"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
-         android:layout_below="@+id/resumeOptionalText"
+         android:layout_below="@+id/paper_info_notes"
          />
      <com.sctn.sctnet.view.ItemView
          android:id="@+id/itemview12"
@@ -131,6 +123,11 @@
          android:layout_height="wrap_content"
          android:layout_below="@+id/itemview11"
          />
-          
+      <com.sctn.sctnet.view.ItemView
+         android:id="@+id/itemview13"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         android:layout_below="@+id/itemview12"
+         />    
     </RelativeLayout> 
 </RelativeLayout>
