--- a/sctnet/res/values/color.xml
+++ b/sctnet/res/values/color.xml
@@ -10,4 +10,5 @@
      <color name="semiTransparent">#55000000</color>
      <color name="orange">#f78514</color><!-- 暗橙色 -->
      <color name="lightGreen">#73ba37</color><!-- 浅绿色 -->
+     <color name="list_item_color">#fefefe</color><!-- list_item的背景色 -->
  </resources>
