--- a/sctnet/res/layout/read_my_resume_item.xml
+++ b/sctnet/res/layout/read_my_resume_item.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/list_item_bg"
+    android:background="@drawable/item_selector"
     android:orientation="horizontal"
     android:gravity="center_vertical"
      >
