--- a/sctnet/res/drawable/blue_button_selector.xml
+++ b/sctnet/res/drawable/blue_button_selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape >
-            <solid android:color="#436EEE"/>
+            <solid android:color="#0871a8"/>
             <corners android:radius="3dp" />
         </shape>
     </item>
