--- a/sctnet/res/layout/company_info_activity.xml
+++ b/sctnet/res/layout/company_info_activity.xml
@@ -1,4 +1,4 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -6,161 +6,62 @@
     android:orientation="vertical" >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/companyInfo_tab_title"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="20dp"
-         >
+        android:background="@color/white" >
+
+        <!-- 公司简介 -->
 
         <TextView
-            android:id="@+id/company_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="2dp"
-            android:text="XXXXXX股份有限公司"
-            android:textColor="@color/black"
-            android:textSize="16dp" />
-
-        <TextView
-            android:id="@+id/company_industry"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="2dp"
-            android:text="IT/计算机软件"
-            android:textColor="#3B3B3B"
-            android:textSize="13dp" />
-
-        <!--
-             <TextView
-            android:id="@+id/company_scale"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="2dp"
-            android:text="1000~9999人"
-            android:textColor="#FF0000"
-            android:textSize="13dp" />
-        -->
-
-        <com.sctn.sctnet.view.DashedLineView
-            android:id="@+id/dashedLine"
+            android:id="@+id/company_profile_title"
             android:layout_width="wrap_content"
-            android:layout_height="13dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:orientation="vertical" >
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="2dp"
-                    android:text="公司性质"
-                    android:textColor="#3B3B3B"
-                    android:textSize="13dp" />
-
-                <TextView
-                    android:id="@+id/company_type"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="2dp"
-                    android:text="国企"
-                    android:textColor="@color/black"
-                    android:textSize="16dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:orientation="vertical"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp" >
-
-                <TextView
-                    android:id="@+id/company_scale"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="2dp"
-                    android:text="公司规模"
-                    android:textColor="#3B3B3B"
-                    android:textSize="13dp" />
-
-                <TextView
-                    android:id="@+id/company_scale"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="2dp"
-                    android:text="1000~9999人"
-                    android:textColor="@color/black"
-                    android:textSize="16dp" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <com.sctn.sctnet.view.DashedLineView
-            android:id="@+id/dashedLine"
-            android:layout_width="wrap_content"
-            android:layout_height="13dp" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="45dip"
             android:layout_gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="5dp" >
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:gravity="center"
+            android:text="@string/companyProfile"
+            android:textColor="@color/blue"
+            android:textSize="16.0dip" />
 
-            <ImageView
-                android:id="@+id/iv_saloninfo_dituview"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="12dp"
-                android:contentDescription="@null"
-                android:gravity="right"
-                android:src="@drawable/dingwei" >
-            </ImageView>
+        <!-- 附近 -->
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="北京市朝阳区北苑路乙108号"
-                android:textColor="#3B3B3B"
-                android:textSize="16dp" />
-        </LinearLayout>
-
-        <com.sctn.sctnet.view.DashedLineView
-            android:id="@+id/dashedLine"
-            android:layout_width="wrap_content"
-            android:layout_height="13dp" />
-        
         <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="公司介绍"
-                android:layout_marginTop="8dp"
-                android:textColor="@color/blue"
-                android:textSize="16dp" />
-        
-        <TextView 
-            android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="苹果公司（Apple Inc.）是美国的家高科技公司，2007年由美国苹果电脑（Apple Computer, Inc.）电子科技产品，在2013年世界500强排行榜中排名第19，总部位于加利福尼亚州的库比蒂诺（Cupertino）。苹果公司由史蒂夫·乔布斯、斯蒂夫·盖瑞·沃兹尼亚克和罗纳德·杰拉尔德·包的在1976年4月1日创立，在高科技企业中以创新而闻名，设计并打造了iPod和iTunes、Mac 笔记本电脑和台式电脑、OS X 操作系统，以及革命性的iPhone和 iPad。苹果公司已连续三年成为全球市值最大公司，在2012年曾经创下6235亿美元记录，在2013年后因企业市值缩水24%为4779亿美元，但仍然还是全球市值最大公司。"
-                android:textColor="#3B3B3B"
-                android:textSize="14dp" 
-                android:lineSpacingExtra="3dp"
-            />
-        
+            android:id="@+id/job_description_title"
+            android:layout_width="wrap_content"
+            android:layout_height="45dip"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@color/background"
+            android:gravity="center"
+            android:text="@string/jobDescription"
+            android:textColor="@color/lightBlack"
+            android:textSize="16.0dip" />
     </LinearLayout>
 
-</ScrollView>
+    <!-- 左右滚动控件 总体布局文件 -->
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_company_info"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/companyInfo_tab_title"
+        android:layout_gravity="center"
+        android:layout_marginBottom="40dp"
+        android:background="#ffffff"
+        android:flipInterval="30"
+        android:persistentDrawingCache="animation" />
+
+    <LinearLayout
+        android:id="@+id/footbar_layout_ly"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:visibility="visible" >
+
+        <include layout="@layout/footbar_layout" >
+        </include>
+    </LinearLayout>
+
+</RelativeLayout>
