--- a/sctnet/res/layout/job_search_activity.xml
+++ b/sctnet/res/layout/job_search_activity.xml
@@ -1,86 +1,113 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/background"
-     >
-    
-           <RelativeLayout
-             android:id="@+id/home_activity_search"
-             android:layout_width="wrap_content"  
-             android:layout_height="wrap_content"  
-             android:layout_marginTop="20dip"
-              >
+    android:layout_height="wrap_content"
+    android:id="@+id/sv_scroll"
+    android:background="@color/background" >
 
-           <EditText 
-             android:id="@+id/search_edit_bg"
-             android:layout_width="fill_parent"
-	         android:layout_height="wrap_content" 
-             android:background="@drawable/search_bg"
-             android:hint="@string/homeactivityhint"
-             android:gravity="center_vertical"
-             android:paddingLeft="35dip"
-             android:singleLine="true"
-             android:focusable="false"
-               />  
-               
-              <ImageView 
-	        android:id="@+id/search_bar"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" 
-	        android:layout_marginLeft="10dip"
-	        android:layout_centerVertical="true"
-	        android:layout_alignLeft="@+id/search_edit_bg"  
-	        android:background="@drawable/search_bar"
-        /> 
-         </RelativeLayout>
-    
-    <LinearLayout 
-        android:id="@+id/search_item_layout"
-        android:layout_width="wrap_content"
-	    android:layout_height="wrap_content" 
-	    android:orientation="vertical"
-	    android:layout_below="@+id/home_activity_search"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
         >
-    
-      <com.sctn.sctnet.view.ItemView
-         android:id="@+id/itemview1"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         />
-        <com.sctn.sctnet.view.ItemView
-         android:id="@+id/itemview2"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         />
+
+        <RelativeLayout
+            android:id="@+id/home_activity_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dip" >
+
+            <EditText
+                android:id="@+id/search_edit_bg"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/search_bg"
+                android:focusable="false"
+                android:gravity="center_vertical"
+                android:hint="@string/homeactivityhint"
+                android:paddingLeft="35dip"
+                android:singleLine="true" />
+
+            <ImageView
+                android:id="@+id/search_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/search_edit_bg"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dip"
+                android:background="@drawable/search_bar" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/search_item_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/home_activity_search"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical" >
+
             <com.sctn.sctnet.view.ItemView
-         android:id="@+id/itemview3"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         />
-                <com.sctn.sctnet.view.ItemView
-         android:id="@+id/itemview4"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         />
-    </LinearLayout>
-    
-    <Button 
-        android:id="@+id/search_btn"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/detail_title_bg"
-        android:text="搜    索"
-        android:layout_below="@+id/search_item_layout"
-        android:layout_marginTop="10dip"
-        />
-    
-      <ListView 
-          android:id="@+id/search_history_listview1"	
-          android:layout_width="fill_parent"  
-          android:layout_height="wrap_content"
-          android:cacheColorHint="#00000000"
-          android:layout_below="@+id/search_btn"
-       /> 
-    
-</RelativeLayout>
+                android:id="@+id/itemview1"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+            <com.sctn.sctnet.view.ItemView
+                android:id="@+id/itemview2"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+            <com.sctn.sctnet.view.ItemView
+                android:id="@+id/itemview3"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+            <com.sctn.sctnet.view.ItemView
+                android:id="@+id/itemview4"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/search_btn"
+            android:layout_width="fill_parent"
+            android:layout_height="45dip"
+            android:layout_below="@+id/search_item_layout"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/blue_button_selector"
+            android:enabled="true"
+            android:shadowColor="#7f000000"
+            android:shadowDx="0.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="1.0"
+            android:text="开始搜索"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_search_history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/search_btn"
+            android:padding="10dp"
+            android:drawableLeft="@drawable/search_history"
+            android:text="近期搜索记录"
+            android:textColor="@color/blue"
+            android:textSize="16dp" />
+
+        <LinearLayout
+            android:id="@+id/search_history_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_search_history" 
+            android:paddingBottom="20dp"
+            android:orientation="vertical"
+            >
+
+        </LinearLayout>
+    </RelativeLayout>
+
+</ScrollView>
