--- a/sctnet/res/layout/login_activity.xml
+++ b/sctnet/res/layout/login_activity.xml
@@ -23,6 +23,52 @@
         android:layout_marginTop="30.0dip"
         android:paddingTop="21.0dip" >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/linear_layout"
+            android:orientation="horizontal" >
+
+            <EditText
+                android:id="@+id/login_edit_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="6"
+                android:background="@null"
+                android:drawableLeft="@drawable/icon1"
+                android:drawablePadding="10dp"
+                android:hint="@string/username_hint"
+                android:padding="10dp" />
+        </LinearLayout>
+        
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/linear_layout"
+            android:orientation="horizontal" >
+
+            <EditText
+                android:id="@+id/login_edit_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="6"
+                android:background="@null"
+                android:drawableLeft="@drawable/icon1"
+                android:drawablePadding="10dp"
+                android:hint="@string/password_hint"
+                android:inputType="textPassword"
+                android:padding="10dp" />
+        </LinearLayout>
+
+        
+
+        <!--
         <EditText
             android:id="@+id/login_edit_username"
             android:layout_width="fill_parent"
@@ -83,6 +129,7 @@
             android:text="@string/password_label"
             android:textColor="#FF000000"
             android:textSize="20.0dip" />
+        -->
     </RelativeLayout>
 
     <RelativeLayout
@@ -117,23 +164,30 @@
 
     <Button
         android:id="@+id/login_btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10.0dip"
-        android:background="@drawable/login_btnclick"
-        android:textColor="#FFFFFFFF"
-        android:textSize="16dip" />
-    
-    <TextView 
-        android:layout_marginTop="40dip"
+        android:layout_width="fill_parent"
+        android:layout_height="45dip"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/blue_button_selector"
+        android:enabled="true"
+        android:shadowColor="#7f000000"
+        android:shadowDx="0.0"
+        android:shadowDy="1.0"
+        android:shadowRadius="1.0"
+        android:text="@string/login"
+        android:textColor="#ffffff"
+        android:textSize="18sp" />
+
+    <TextView
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/blue"
-        android:text="立即注册"
         android:layout_gravity="right"
         android:layout_marginRight="20dip"
-        />
+        android:layout_marginTop="30dip"
+        android:text="@string/registerNow"
+        android:textColor="@color/lightBlack" />
 
 </LinearLayout>
