--- a/sctnet/res/layout/select_area_item.xml
+++ b/sctnet/res/layout/select_area_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/area"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/item_selector"
         android:text="北京"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
