--- a/sctnet/res/layout/select_area_listview.xml
+++ b/sctnet/res/layout/select_area_listview.xml
@@ -24,11 +24,11 @@
 	    </ListView>
 	</LinearLayout>
 	
-	<!-- <com.cattsoft.booking.view.SideBar  
+	<!-- <com.sctn.sctnet.view.SideBar  
 	   android:layout_marginTop="21dip"
 	    android:id ="@+id/sideBar"  
 	    android:layout_height="wrap_content"  
 	    android:layout_width="30dp"  
 	    android:layout_gravity="right|center_vertical"
-	/>  -->
+	/> --> 
 </FrameLayout>
