简历管理和登录数据交互

--- a/sctnet/res/layout/child_item_layout.xml
+++ b/sctnet/res/layout/child_item_layout.xml
@@ -19,6 +19,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:singleLine="false"
+        android:maxEms="10"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         android:paddingRight="15dp"/>
