--- a/sctnet/res/layout/resume_edit_activity.xml
+++ b/sctnet/res/layout/resume_edit_activity.xml
@@ -82,6 +82,12 @@
          android:layout_height="wrap_content"
          android:layout_below="@+id/itemview2"
          />
+      <com.sctn.sctnet.view.ItemView
+         android:id="@+id/itemview4"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         android:layout_below="@+id/itemview3"
+         />
           
     </RelativeLayout> 
     <RelativeLayout 
